HTML CSS practice

--- a/index.html
+++ b/index.html
@@ -8,6 +8,71 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- Header -->
+    <div class="header">
+      <div class="parter__icon">
+        <ul>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fa-brands fa-airbnb"></i>
+              <span>가나다라</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="title">
+        <div>
+          <img src="./assets/maplegg_logo2_white.svg" alt="메이플지지" />
+          <h1>메이플 지지</h1>
+        </div>
+        <div class="title__search">
+          <input type="text" placeholder="캐릭터 또는 길드" />
+          <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        </div>
+      </div>
+    </div>
     <div class="navigation">
       <ul>
         <li class="list active">
@@ -54,8 +119,8 @@
       </ul>
     </div>
   </body>
-  <script src="./main.js"></script>
 
+  <script src="./main.js"></script>
   <script
     src="https://kit.fontawesome.com/a32650dbb1.js"
     crossorigin="anonymous"
