Maplegg header & searchbox &nav html,css

--- a/index.html
+++ b/index.html
@@ -63,15 +63,39 @@
         </ul>
       </div>
       <div class="title">
-        <div>
+        <a href="#">
           <img src="./assets/maplegg_logo2_white.svg" alt="메이플지지" />
           <h1>메이플 지지</h1>
-        </div>
-        <div class="title__search">
+        </a>
+        <form class="title__search">
           <input type="text" placeholder="캐릭터 또는 길드" />
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
+        </form>
       </div>
+    </div>
+    <!-- Navigation -->
+    <div class="navigation__main">
+      <ul>
+        <li>
+          <a href="#"><span>즐찾</span></a>
+        </li>
+        <li>
+          <a href="#"><span>믹염코디</span></a>
+        </li>
+        <li>
+          <a href="#"><span>사냥터</span></a>
+        </li>
+        <li>
+          <a href="#""><div><span>통계</span><i class="fa-solid fa-angle-down"></i></div
+          ></a>
+        </li>
+        <li>
+          <a href="#"><span>랭킹</span><i class="fa-solid fa-angle-down"></i></a>
+        </li>
+        <li>
+          <a href="#"><span>정보</span><i class="fa-solid fa-angle-down"></i></a>
+        </li>
+      </ul>
     </div>
     <div class="navigation">
       <ul>
